gitops/applications/demo-app/manifests/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: app-dev
spec:
  selector:
    app: demo-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
