gitops/applications/demo-app/manifests/dev/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: app-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
